<resources>
    <string name="app_name">FMIPA Schedule</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Jadwal</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="login">Login</string>
    <string name="user_phone">Nomor Telepon</string>
    <string name="user_password">Kata Sandi</string>
    <string name="register_now">Daftar Sekarang</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="loading">Loading</string>
    <string name="please_wait">Silahkan tunggu!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">Nama Lengkap</string>
    <string name="user_email">Alamat Email</string>
    <string name="type_mahasiswa">Mahasiswa</string>
    <string name="type_dosen">Dosen</string>
    <string name="user_nim">NIM</string>
    <string name="user_nip">NIP</string>
    <string name="birthdate">Tanggal Lahir</string>
    <string name="password_conf">Konfirmasi Kata Sandi</string>
    <string name="error_form_not_complete">Silahkan isi semua data terlebih dahulu!</string>
    <string name="error_password_not_match">Konfirmasi kata sandi tidak tepat!</string>
    <string name="error_default">Failed!</string>
    <string name="bidang">Bidang Studi</string>
    <string name="program_studi">Program Studi</string>
    <string name="sign_out">Keluar</string>
    <string name="greeting_main">Selamat datang,</string>
    <string name="jadwal_hari_ini">Jadwal Hari Ini</string>
    <string name="new_schedule">Buat Jadwal Baru</string>
    <string name="schedule_time_not_found">Tidak ada waktu tersedia di hari ini, silahkan cari jadwal di hari lain!</string>
    <string name="mata_kuliah">Mata Kuliah</string>
    <string name="semester">Semester</string>
    <string name="jumlah_sks">Jumlah SKS</string>
    <string name="ruang_kelas">Ruang Kelas</string>
    <string name="choose_day">Pilih Hari</string>
    <string name="save">Simpan</string>
    <string name="kode_mata_kuliah">Kode Mata Kuliah</string>
    <string name="w_p">W/P</string>
    <string name="hari">Hari</string>
    <string name="waktu">Waktu</string>
    <string name="room">Ruang</string>
    <string name="delete_schedule">Hapus Jadwal</string>
    <string name="dosen">Dosen</string>
    <string name="tambah_dosen">Tambah dosen</string>
</resources>