<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.schedule.ScheduleEditorFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="14dp">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="outline">
            <EditText
                android:id="@+id/program"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/program_studi"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="outline">
            <EditText
                android:id="@+id/matkul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mata_kuliah"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="outline">
            <EditText
                android:id="@+id/semester"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/semester"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="outline">
            <EditText
                android:id="@+id/sks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/jumlah_sks"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>
        <RadioGroup
            android:id="@+id/wp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/w"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="Wajib" />
            <RadioButton
                android:id="@+id/p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Peminatan" />
        </RadioGroup>
        <View style="@style/Divider" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:text="@string/dosen" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:nestedScrollingEnabled="false"
            android:overScrollMode="never" />
        <Button
            android:id="@+id/btn_dosen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#ccc"
            android:textAllCaps="false"
            android:layout_marginBottom="14dp"
            android:text="@string/tambah_dosen" />
        <View style="@style/Divider" android:layout_marginBottom="14dp" />
        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:backgroundTint="@color/primary"
            android:textColor="@color/black"/>
    </LinearLayout>

</ScrollView>